Updating Jupter Notebook with answer 1

--- a/PS3_answers.ipynb
+++ b/PS3_answers.ipynb
@@ -2,22 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +57,89 @@
        "421  2018-10-10 18:06         6.647   0.561   1   0   0   0         p"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1\n",
+    "\n",
+    "# import data using pandas\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"CO-OPS__8729108__wl.csv\")\n",
+    "\n",
+    "# isolate water_levels column\n",
+    "water_levels = data[' Water Level']\n",
+    "\n",
+    "# set highest_water_level at 0, then run for loop to select highest value in column\n",
+    "highest_water_level = 0\n",
+    "for water_level in data[' Water Level']:\n",
+    "    if water_level > highest_water_level:\n",
+    "        highest_water_level = water_level\n",
+    "\n",
+    "# print row with highest water level by selecting row in water level column that is equal to the highest_water_level found using the for loop\n",
+    "data[data[' Water Level'] == highest_water_level]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date Time</th>\n",
+       "      <th>Water Level</th>\n",
+       "      <th>Sigma</th>\n",
+       "      <th>O</th>\n",
+       "      <th>F</th>\n",
+       "      <th>R</th>\n",
+       "      <th>L</th>\n",
+       "      <th>Quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>421</th>\n",
+       "      <td>2018-10-10 18:06</td>\n",
+       "      <td>6.647</td>\n",
+       "      <td>0.561</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date Time   Water Level   Sigma   O   F   R   L  Quality \n",
+       "421  2018-10-10 18:06         6.647   0.561   1   0   0   0         p"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +218,7 @@
        "417                         0.64  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,28 +229,24 @@
     "import pandas as pd\n",
     "\n",
     "# use pandas to import the csv as a dataframe\n",
-    "\n",
     "data = pd.read_csv(\"CO-OPS__8729108__wl.csv\")\n",
     "\n",
     "# calculate the differences between each of the rows in the column \" Water Level\" using the function .diff\n",
     "# save the differences as a variable\n",
-    "\n",
     "differences = data[' Water Level'].diff()\n",
     "differences \n",
     "\n",
     "# add the list of differences to the prexisting dataframe\n",
-    "\n",
     "data['Differences_in_water_levels'] = differences\n",
     "data\n",
     "\n",
     "# find the maximum difference in the dataframe, and print that row\n",
-    "\n",
     "data[data['Differences_in_water_levels'] == data['Differences_in_water_levels'].max()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -209,20 +272,18 @@
     "import pandas as pd\n",
     "\n",
     "# used pandas to isolate water level and date and time into two seperate columns\n",
-    "\n",
     "data = pd.read_csv(\"CO-OPS__8729108__wl.csv\")\n",
     "water_level = data[' Water Level']\n",
     "date_time = data['Date Time']\n",
     "\n",
     "# used matlab to plot date and time on the x axis and water level on the y\n",
-    "\n",
     "fig = plt.figure()\n",
     "plt.plot(date_time, water_level)\n",
     "plt.xlabel(\"Time\")\n",
     "plt.ylabel('Water Level')\n",
     "plt.title(\"Water Levels over Time\")\n",
-    "# saved image \n",
     "\n",
+    "# saved image \n",
     "fig.savefig('water_levels_over_time.png')"
    ]
   },
